feat/associate queues to inbox (#4)
* feat: create inbox team model and migrate

* refactor: add associations to inbox team in inbox, team and user models

* feat: create inbox team controller and helper

* feat: implement jbuilder to return a json to client

* feat: creating routes to inbox teams

* test: implement integrations tests in inbox teams controller with 100 coverage

* chore: create new schema based on model changes

* chore: modify gitignore

* refactor: follow code style standard

* feat: create after_create and after_destroy callback functions to modify rr service

* refactor: use agents of associated teams as members of round robin inbox queue

* test: improve round robin inbox service to coverage inbox teams

* docs: add inbox teams documentation to swagger

---------
